<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/btnGoRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="112dp"
        android:background="@android:color/transparent"
        android:text="@string/goRegister"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtHeader2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txtWelcome"
        android:layout_marginTop="198dp"
        android:text="@string/lgnHeader2"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imgHeaderLogo"
        android:layout_width="91dp"
        android:layout_height="115dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/imgHeaderLoginLogo"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/imgUsernameBox"
        android:layout_width="352dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="244dp"
        android:contentDescription="@string/imgUsernameBox"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/usernamebox" />

    <EditText
        android:id="@+id/edtUsernameLogin"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="252dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/strUsername"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/imgPasswordBox"
        android:layout_width="382dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="290dp"
        android:contentDescription="@string/imgPasswordBox"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/usernamebox" />

    <EditText
        android:id="@+id/edtPasswordLogin"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="298dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/strPassword"
        android:inputType="textPersonName|textPassword"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/imgFacebookLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="60dp"
        android:contentDescription="@string/imgFacebookLogo"
        app:srcCompat="@drawable/facebooklogo" />

    <ImageView
        android:id="@+id/imgTwitterLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/imgTwitterLogo"
        app:srcCompat="@drawable/twitterlogo" />

    <ImageView
        android:id="@+id/imgInstagramLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/imgInstagramLogo"
        app:srcCompat="@drawable/instagramlogo" />

    <ImageView
        android:id="@+id/imgLogin"
        android:layout_width="103dp"
        android:layout_height="44dp"
        android:layout_alignEnd="@+id/imgUsernameBox"
        android:layout_below="@+id/imgPasswordBox"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/loginbtnbackground" />

    <Button
        android:id="@+id/btnGoLogin"
        android:layout_width="103dp"
        android:layout_height="44dp"
        android:layout_alignEnd="@+id/imgUsernameBox"
        android:layout_below="@+id/imgPasswordBox"
        android:layout_marginTop="8dp"
        android:background="@drawable/loginbtnbackground" />

    <Switch
        android:id="@+id/swRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imgUsernameBox"
        android:layout_below="@+id/imgPasswordBox"
        android:layout_marginTop="15dp"
        android:textColorLink="@color/white" />

    <TextView
        android:id="@+id/txtRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imgFacebookLogo"
        android:layout_below="@+id/imgPasswordBox"
        android:layout_marginStart="3dp"
        android:layout_marginTop="18dp"
        android:text="@string/rememberMe"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/txtHeader3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="154dp"
        android:text="Hesabın yok mu?"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="152dp"
        android:text="@string/lgnHeader1"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/pbLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

</RelativeLayout>