<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/ahuPrimaryColor">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            app:srcCompat="@drawable/whitelandedcirclelogo" />

        <EditText
            android:id="@+id/edtSearchEvent"
            android:layout_width="315dp"
            android:layout_height="27dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="69dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/roundededittext"
            android:ems="10"
            android:hint="Etkinlik Ara"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="28dp"
            android:background="@drawable/iconsearch" />
    </RelativeLayout>


    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:paddingTop="@dimen/appbar_padding_top"
        app:tabIndicatorColor="@color/ahuPrimaryColor"
        app:tabTextAppearance="@style/MyTabLayoutTextAppearance">

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ahuPrimaryColor"
            android:foregroundTint="@color/ahuPrimaryColor"
            android:text="@string/tab_text_1" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_text_2" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_text_3" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tab5" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tab6" />

    </android.support.design.widget.TabLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="536dp"
        android:layout_alignTop="@+id/rlHeader"
        android:layout_marginTop="56dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="55dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <Button
        android:id="@+id/btnDudula"
        android:layout_width="82dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/dudulaicon" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="55dp"
        android:background="@color/ahuPrimaryColor" />

</RelativeLayout>